@@ -1,5 +1,12 @@
 2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix recursive html and install-* doc rules for BSD make.
+	* automake.in (%required_targets): Add html-am,
+	install-html-am, install-dvi-am, install-pdf-am, install-ps-am,
+	install-info-am.
+	* tests/txinfo32.test: New test.
+	* tests/Makefile.am: Update.
+
 	Fix comment typo.
 	* lib/am/distdir.am (distcheck): Fix typo in comment.
 
